--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ POSTGRES_PORT = 5432
 POSTGRES_USER = "postgres"
 POSTGRES_PASSWORD = "postgres"
 POSTGRES_DBNAME = "users"
+
+# JWT
+JWT_SECRET_KEY = "secret"
+ACCESS_TOKEN_EXP_DELTA_SECONDS = 900
+REFRESH_TOKEN_EXP_DELTA_SECONDS = 86400
