ADD: Redis support

--- a/.env
+++ b/.env
@@ -9,6 +9,11 @@ POSTGRES_USER = "postgres"
 POSTGRES_PASSWORD = "postgres"
 POSTGRES_DBNAME = "users"
 
+# Redis
+REDIS_HOST = "localhost"
+REDIS_PORT = 6379
+REDIS_PASSWORD = "eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81"
+
 # JWT
 JWT_SECRET_KEY = "secret"
 ACCESS_TOKEN_EXP_DELTA_SECONDS = 900
