--- a/.env
+++ b/.env
@@ -18,3 +18,6 @@ REDIS_PASSWORD = "eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81"
 JWT_SECRET_KEY = "secret"
 ACCESS_TOKEN_EXP_DELTA_SECONDS = 900
 REFRESH_TOKEN_EXP_DELTA_SECONDS = 86400
+
+# Email
+EMAIL_VERIFICATION_EXP_DELTA_SECONDS = 86400
