--- a/server/auth-service/.env
+++ b/server/auth-service/.env
@@ -14,6 +14,14 @@ REDIS_HOST = "localhost"
 REDIS_PORT = 6379
 REDIS_PASSWORD = "redis"
 
+# RabbitMQ
+AMQP_SCHEME = "amqp"
+AMQP_HOST = "localhost"
+AMQP_PORT = 5672
+AMQP_USER = "rabbitmq"
+AMQP_PASSWORD = "rabbitmq"
+AMQP_QUEUE = "email_queue"
+
 # JWT
 JWT_SECRET_KEY = "secret"
 ACCESS_TOKEN_EXP_DELTA_SECONDS = 900
